[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/ball.png" type="Texture" id=1]
[ext_resource path="res://scripts/Ball.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 7 )

[node name="Ball" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="BallSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="BallCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ServeTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="ServeTimer" to="." method="_on_ServeTimer_timeout"]
